--- a/PFlowsPaperv2/PFlowsPaper.tex
+++ b/PFlowsPaperv2/PFlowsPaper.tex
@@ -527,15 +527,15 @@ Phosphorus recovered can be further recycled within the food production system, 
 %, which in turn increase the resiliency of the regional food production system, and minimize the environmental footprint of fertilizers production.
 Considering these factors, there exist some governmental initiatives that, through the creation of different forums and platforms, aim to promote the recovery and recycling of phosphorus \citep{NRRPlatform, PFlows_Ontario}. In addition, the European Union is setting specific targets to reduce the use of non-renewable materials in fertilizer production \citep{EurpeanComissionNewFertilizersGoal} and to promote the use of waste-based fertilizers \citep{EurpeanComissionFertilizersRegulation}, encouraging the effective recovery and recycling of phosphorus, and they could serve as a guideline to support phosphorus recovery in other regions. 
 
-The comparison between the phosphorus imported for the production of food within Ontario, i.e., in the form of fertilizer or animal feed, and the phosphorus that could be recovered, as it is shown in Figure \ref{fig:PSubstitution}, is a useful metric to determine the effectiveness of phosphorus recovery, and the potential reduction of phosphorus supplies from external sources. This assessment is limited to the food production sector depicted in Figure \ref{fig:FigFlowsSummary} since the recovery of phosphorus is performed in different flows belonging to this sector.
-
-\begin{figure}[H]
+\begin{figure}[h]
 	\centering
 	%	\begin{subfigure}[t]{0.5\linewidth}
 	\includegraphics[width=1\linewidth, trim={0cm 0cm 0cm 0cm},clip]{Figures/PSubstitution.pdf} 
 	\caption{Phosphorus inputs for food production and phosphorus recovered per sector. S1 refers to the scenario minimizing phosphorus recovery cost, while S2 refers to the scenario maximizing phosphorus recovery.}
 	\label{fig:PSubstitution}
 \end{figure}
+
+The comparison between the phosphorus imported for the production of food within Ontario, i.e., in the form of fertilizer or animal feed, and the phosphorus that could be recovered, as it is shown in Figure \ref{fig:PSubstitution}, is a useful metric to determine the effectiveness of phosphorus recovery, and the potential reduction of phosphorus supplies from external sources. This assessment is limited to the food production sector depicted in Figure \ref{fig:FigFlowsSummary} since the recovery of phosphorus is performed in different flows belonging to this sector.
 
 Figure \ref{fig:PSubstitution} shows that up to 88\% of the phosphorus used for food production, excluding imports of food that have been produce elsewhere, could be recovered and recycled in the best case scenarios where no phosphorus losses occur between the recovery and the reuse stages. An effective recycling of phosphorus implies the redistribution of this material from the locations where it is released to the livestock operations where it is used for livestock raise, or to phosphorus-deficient cropfields, which in turn involves the transportation of phosphorus products as the last stage before the use final use of the recovered phosphorus. It must be considered that the transportation of phosphorus products result in additional costs that can hinder the recycling of phosphorus, as well as environmental impacts related with the current use of fossil fuels-based transportation vehicles. In this context, coordinated-market approaches have been proposed to optimize the spatial distribution of phosphorus from regions with surplus of phosphorus to P-deficient locations, minimizing the cost and environmental footprint of the transportation of phosphorus products \citep{sampat2019coordinated}. 
 %
@@ -869,7 +869,7 @@ The wide difference of costs for the recovery of phosphorus from different flows
 \section{Phosphorus recovery technologies techno-economic data}
 %\begin{table}[!htbp]%[!htbp]
 	\centering
-	\caption{Phosphorus recovery technologies considered in the study. $F$ denotes the phosphorus recovered as $\sfrac{\text{kg P}_{\text{recovered}}}{\text{year}}$, while $\lceil x \rceil$ represent the ceiling function applied to $x$. The definition of annual capital charge ratio $\left( ACCR\right)$ can be found in the Supplementary Material, Section 1.1. Refs: [1]: \protect\citet{martin2021geospatial},
+	\caption{Phosphorus recovery technologies considered in the study. For the treatment of manure we assumed that the units for the separation of the solid and liquid phases is already implemented in the livestock operations. $F$ denotes the phosphorus recovered as $\sfrac{\text{kg P}_{\text{recovered}}}{\text{year}}$, while $\lceil x \rceil$ represent the ceiling function applied to $x$. The definition of annual capital charge ratio $\left( ACCR\right)$ can be found in the Supplementary Material, Section 1.1. Refs: [1]: \protect\citet{martin2021geospatial},
 		[2]: \protect\citet{jupp2021phosphorus},
 		[3]: \protect\citet{egle_phosphorus_2016},
 		[4]: \protect\citet{schoumans2010phosphorus},
@@ -879,19 +879,49 @@ The wide difference of costs for the recovery of phosphorus from different flows
 		[8]: \protect\citet{fernandez2022phosphorus},
 		[9]: \protect\citet{ohtake2019phosphorus},
 		[10]: \protect\citet{sharma2021life}} \label{table:TechParam}
-		\resizebox{1.08\columnwidth}{!}{
+		\resizebox{1.09\columnwidth}{!}{
 		\begin{threeparttable}
 		\begin{tabular}{@{}cccccccccc@{}}
 				\toprule
 				Sector                        & Inflow                                                                                                                                                  & Pretreatment                                                                     & \begin{tabular}[c]{@{}c@{}}Pretreatment cost\\ (EUR/kg P\textsubscript{recovered})\end{tabular} & Technology                                                                               & Type                                                                              & \begin{tabular}[c]{@{}c@{}}P recovery potential\\ (\% related to inflow)\end{tabular} & P recovery cost (EUR/kg P recovered) & TRL                                   & Ref tech \\ \midrule
-				\multirow{27}{*}{Agriculture} & \multirow{10}{*}{\begin{tabular}[c]{@{}c@{}}Cattle and swine manure, \\ liquid phase\\ (30\% of total manure P)\end{tabular}}                               & \begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular} &        See [1]                                & Multiform                                                                                & Struvite                                                                          & 60                                                                                    & $25.7 + 1.10 \cdot 10^6 \cdot \lceil 1.19 \cdot 10^{-4} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                 & 9                                                            & [1]    \\
-				&                                                                                                                                                         & \begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular} &  See [1]                                      & Crystalactor                                                                             & \begin{tabular}[c]{@{}c@{}}Struvite/\\ Calcium phosphate\end{tabular}                                           & 60                                                                                    & $3.53 + \left( 2.30 \cdot 10^6 + 0.71 \cdot \lceil 3.32 \cdot 10^{-5} \cdot F \rceil\right)\lceil 3.32 \cdot 10^{-5} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F} $                                  & 9                                                            &[1]          \\
-				&                                                                                                                                                         & \begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular} &   See [1]                                     & Ostara Pearl 500                                                                             & Struvite                                                                          & 60                                                                                    &  $12.57 + 2.30 \cdot 10^6 \cdot \lceil 7.02 \cdot 10^{-5} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                & 9                                                            & [1]         \\
-				& & \begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular} &    See [1]                                    & Ostara Pearl 2K                                                                             & Struvite                                                                          & 60                                                                                    & $12.57 + 3.10 \cdot 10^6 \cdot \lceil 1.83 \cdot 10^{-5} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                 & 9                                                            &  [1]        \\
-				& & \begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular} &     See [1]                                   & Ostara Pearl 10K                                                                             & Struvite                                                                          & 60                                                                                    &  $12.57 + 10.00 \cdot 10^6 \cdot \lceil 3.65 \cdot 10^{-6} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                  & 9                                                            &   [1]       \\
-				&                                                                                                                                                         & \begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular} &             See [1]                           & Nuresys                                                                                  & Struvite                                                                          & 60                                                                                    & $10.37 + 1.38 \cdot 10^6 \cdot \lceil 2.24 \cdot 10^{-5} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                  & 9                                                            & [1]         \\
+				\multirow{27}{*}{Agriculture} & \multirow{10}{*}{\begin{tabular}[c]{@{}c@{}}Cattle and swine manure, \\ liquid phase\\ (30\% of total manure P)\end{tabular}}                               &
+%				\begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular}
+				Solid-liquid separation
+				&         -
+				%				See [1]
+				& Multiform                                                                                & Struvite                                                                          & 60                                                                                    & $25.7 + 1.10 \cdot 10^6 \cdot \lceil 1.19 \cdot 10^{-4} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                 & 9                                                            & [1]    \\
+				&                                                                                                                                                         & Solid-liquid separation
+%				\begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular} 
+				& -
+%				See [1]
+                & Crystalactor                                                                             & \begin{tabular}[c]{@{}c@{}}Struvite/\\ calcium phosphate\end{tabular}                                           & 60                                                                                    & $3.53 + \left( 2.30 \cdot 10^6 + 0.71 \cdot \lceil 3.32 \cdot 10^{-5} \cdot F \rceil\right)\lceil 3.32 \cdot 10^{-5} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F} $                                  & 9                                                            &[1]          \\
+				&                                                                                                                                                         & 
+				Solid-liquid separation
+%				\begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular}
+				&   -
+				%				See [1]
+				& Ostara Pearl 500                                                                             & Struvite                                                                          & 60                                                                                    &  $12.57 + 2.30 \cdot 10^6 \cdot \lceil 7.02 \cdot 10^{-5} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                & 9                                                            & [1]         \\
+				& & Solid-liquid separation
+%				\begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular}
+				&     -
+				%				See [1]
+				& Ostara Pearl 2K                                                                             & Struvite                                                                          & 60                                                                                    & $12.57 + 3.10 \cdot 10^6 \cdot \lceil 1.83 \cdot 10^{-5} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                 & 9                                                            &  [1]        \\
+				& & Solid-liquid separation
+%				\begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular} 
+				&      -
+				%				See [1]
+				& Ostara Pearl 10K                                                                             & Struvite                                                                          & 60                                                                                    &  $12.57 + 10.00 \cdot 10^6 \cdot \lceil 3.65 \cdot 10^{-6} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                  & 9                                                            &   [1]       \\
+				&                                                                                                                                                         & Solid-liquid separation
+%				\begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular} 
+				&              -
+				%				See [1]
+				& Nuresys                                                                                  & Struvite                                                                          & 60                                                                                    & $10.37 + 1.38 \cdot 10^6 \cdot \lceil 2.24 \cdot 10^{-5} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                  & 9                                                            & [1]         \\
 				%			&                                                                                                                                                         & \begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ ( screw press)\end{tabular} &                                        & P-RoC                                                                                    & Calcium phosphate                                                                 & 60                                                                                    & 36.8                                 & 6                                                            &          \\
-				&                                                                                                                                                         & \begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular} &   See [1]                                     & MAPHEX                                                                                   & Solid                                                                             & 90                                                                                    & $184.67 + 0.30 \cdot 10^6 \cdot \lceil 2.47 \cdot 10^{-4} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                  & 6                                                            &     [1]     \\ \cmidrule(l){2-10}
+				&                                                                                                                                                         & Solid-liquid separation
+%				\begin{tabular}[c]{@{}c@{}}Solid-liquid separation\\ (screw press)\end{tabular}
+				&    -
+				%				See [1]
+				& MAPHEX                                                                                   & Solid                                                                             & 90                                                                                    & $184.67 + 0.30 \cdot 10^6 \cdot \lceil 2.47 \cdot 10^{-4} \cdot F \rceil \cdot ACCR \cdot \frac{1}{F}$                                  & 6                                                            &     [1]     \\ \cmidrule(l){2-10}
 				& \multirow{7}{*}{\begin{tabular}[c]{@{}c@{}}Cattle and swine manure, \\ solid phase\\ (70\% of total manure P)\end{tabular}}                                & Incineration                                                                     & 8.9                                    & EcoPhos                                                                                  & Phosphoric acid                                                                   & 82                                                                                    & 4.5                                  & 6                                                            & [2,3,4]    \\ 
 				&                                                                                                                                                         & Incineration                                                                     & 8.9                                    & AshDec depollution                                                                       & Calcium phosphate                                                                 & 86                                                                                    & 1.8                                  & 6                                                            &   [2,3,4] \\
 				&                                                                                                                                                         & Incineration                                                                     & 8.9                                    & AshDec Rhenania                                                                          & Calcium phosphate                                                                 & 86                                                                                    & 1.9                                  & 6                                                            &   [2,3,4] \\
@@ -911,18 +941,18 @@ The wide difference of costs for the recovery of phosphorus from different flows
 				&                                                                                                                                                         & Incineration                                                                     & 14.6                                   & LEACHPHOS                                                                                & Calcium phosphate                                                                 & 78                                                                                    & 5.1                                  & 9                                                            &  [2,3,7]  \\
 				&                                                                                                                                                         & Incineration                                                                     & 14.6                                   & RecoPhos                                                                                 & Mineral                                                                           & 87                                                                                    & 2.5                                  & 9                                                            &  [2,3,7]  \\
 				&                                                                                                                                                         & Incineration                                                                     & 14.6                                   & Thermophos                                                                               & P4                                                                                & 81                                                                                    & 2.7                                  & 9                                                            &  [2,3,7]  \\ \cmidrule(l){1-10}
-				\multirow{36}{*}{\begin{tabular}[c]{@{}c@{}}Urban \& \\ industrial\end{tabular}}       & \multirow{6}{*}{\begin{tabular}[c]{@{}c@{}}WWTPs\\ (liquid phase)\end{tabular}}                                                                         & -                                                                               & -                                     & Crystalactor                                                                             & \begin{tabular}[c]{@{}c@{}}Struvite/\\ Calcium phosphate\end{tabular}                                                         & 38                                                                                    & $305,920 \cdot \left( \frac{F}{24,966} \right)^{0.59} \cdot \frac{1}{F}$                                 & 9                                                            &     [3]     \\
+				\multirow{36}{*}{\begin{tabular}[c]{@{}c@{}}Urban \& \\ industrial\end{tabular}}       & \multirow{10}{*}{\begin{tabular}[c]{@{}c@{}}WWTPs\\ (liquid phase,\\ 14\% of total wastewater P)\end{tabular}}                                                                         & -                                                                               & -                                     & Crystalactor                                                                             & \begin{tabular}[c]{@{}c@{}}Struvite/\\ Calcium phosphate\end{tabular}                                                         & 38                                                                                    & $305,920 \cdot \left( \frac{F}{24,966} \right)^{0.59} \cdot \frac{1}{F}$                                 & 9                                                            &     [3]     \\
 				&                                                                                                                                                         & -                                                                               & -                                     & Ostara Pearl                                                                             & Struvite                                                                          & 20                                                                                    & $130,856 \cdot \left( \frac{F}{13,140} \right)^{0.36} \cdot \frac{1}{F}$                                  & 9                                                            &   [3]       \\
 				&                                                                                                                                                         & -                                                                               & -                                     & P-RoC                                                                                    & Calcium phosphate                                                                 & 27                                                                                    & $75,970 \cdot \left( \frac{F}{17,739} \right)^{0.78} \cdot \frac{1}{F}$                                  & 6                                                            &    [3]      \\
 				&                                                                                                                                                         & -                                                                               & -                                     & REM-NUT                                                                                  & Struvite                                                                          & 47                                                                                    & $977,933 \cdot \left( \frac{F}{30,879} \right)^{0.94} \cdot \frac{1}{F}$                                 & 6                                                            &   [3]       \\
 				&                                                                                                                                                         & -                                                                               & -                                     & AirPrex                                                                                  & Struvite                                                                          & 15                                                                                    & $74,195 \cdot \left( \frac{F}{9,855} \right)^{0.38} \cdot \frac{1}{F}$                                  & 9                                                            &     [3]     \\
 				&                                                                                                                                                         & -                                                                               & -                                     & PRISA                                                                                    & Struvite                                                                          & 18                                                                                    & $186,923 \cdot \left( \frac{F}{11,826} \right)^{0.43} \cdot \frac{1}{F}$                                  & 6                                                            &     [3]     \\ \cmidrule(l){2-10}
-				& \multirow{5}{*}{\begin{tabular}[c]{@{}c@{}}WWTPs \\ (sewage sludge,\\ 60-90\% of P)\end{tabular}}                                                       & -                                                                               & -                                     & Stuttgart process                                                                        & Struvite                                                                          & 40                                                                                    & $581,730 \cdot \left( \frac{F}{26,280} \right)^{0.89} \cdot \frac{1}{F}$                                 & 9                                                            &   [3]       \\
+				& \multirow{8}{*}{\begin{tabular}[c]{@{}c@{}}WWTPs \\ (sewage sludge,\\ 86\% of total wastewater P)\end{tabular}}                                                       & -                                                                               & -                                     & Stuttgart process                                                                        & Struvite                                                                          & 40                                                                                    & $581,730 \cdot \left( \frac{F}{26,280} \right)^{0.89} \cdot \frac{1}{F}$                                 & 9                                                            &   [3]       \\
 				&                                                                                                                                                         & -                                                                               & -                                     & Gifhorn process                                                                          & Struvite                                                                          & 40                                                                                    & $400,384 \cdot \left( \frac{F}{26,280} \right)^{0.82} \cdot \frac{1}{F}$                                    & 9                                                            &   [3]       \\
 				&                                                                                                                                                         & -                                                                               & -                                     & PHOXNAN                                                                                  & Struvite                                                                          & 51                                                                                    & $891,667 \cdot \left( \frac{F}{33,507} \right)^{0.84} \cdot \frac{1}{F}$                                 & 6                                                            &    [3]      \\
 				&                                                                                                                                                         & -                                                                               & -                                     & Aqua Reci                                                                                & Calcium phosphate                                                                 & 61                                                                                    & $939,605 \cdot \left( \frac{F}{40,077} \right)^{0.82} \cdot \frac{1}{F}$                                 & 6                                                            &    [3]      \\
 				&                                                                                                                                                         & -                                                                               & -                                     & MEPHREC                                                                                  & P rich slag                                                                       & 68                                                                                    & $1,154,473 \cdot \left( \frac{F}{44,676} \right)^{0.61} \cdot \frac{1}{F}$                                 & 6                                                            &    [3]      \\ \cmidrule(l){2-10}
-				& \multirow{7}{*}{\begin{tabular}[c]{@{}c@{}}WWTPs \\ (sewage sludge ash SSA,\\ 60-90\% of P)\end{tabular}}                                               & Incineration                                                                     & 8                                      & EcoPhos                                                                                  & Phosphoric acid                                                                   & 82                                                                                    & 4.5                                  & 6                                                            &    [3]      \\
+				& \multirow{7}{*}{\begin{tabular}[c]{@{}c@{}}WWTPs \\ (sewage sludge ash SSA,\\ 86\% of total wastewater P)\end{tabular}}                                               & Incineration                                                                     & 8                                      & EcoPhos                                                                                  & Phosphoric acid                                                                   & 82                                                                                    & 4.5                                  & 6                                                            &    [3]      \\
 				&                                                                                                                                                         & Incineration                                                                     & 8                                      & AshDec depollution                                                                       & Calcium phosphate                                                                 & 86                                                                                    & 1.8                                  & 6                                                            &    [3]      \\
 				&                                                                                                                                                         & Incineration                                                                     & 8                                      & AshDec Rhenania                                                                          & Calcium phosphate                                                                 & 86                                                                                    & 1.9                                  & 6                                                            &     [3]     \\
 				&                                                                                                                                                         & Incineration                                                                     & 8                                      & PASCH                                                                                    & Calcium phosphate                                                                 & 79                                                                                    & 4.7                                  & 6                                                            &     [3]     \\
@@ -935,7 +965,7 @@ The wide difference of costs for the recovery of phosphorus from different flows
 				%			&
 				& Incineration                                                                     & 6.43                                      & AshDec Rhenania                                                                          & Calcium phosphate                                                                 & 86                                                                                    & 1.9                                  & 6                                                            &    [3,9,10]      \\
 				&                                                                                                                                                         & Incineration                                                                     & 6.43                                      & PASCH                                                                                    & Calcium phosphate                                                                 & 79                                                                                    & 4.7                                  & 6                                                            &     [3,9,10]     \\
-				&                                                                                                                                                         & Incineration                                                                     & 6.43                                      & LEACHPHOS                                                                                & Calcium phosphate                                                                 & 78                                                                                    & 5.1                                  & 9                                                            &      [3,9,10]    \\
+				&                                                                                                                                separation                         & Incineration                                                                     & 6.43                                      & LEACHPHOS                                                                                & Calcium phosphate                                                                 & 78                                                                                    & 5.1                                  & 9                                                            &      [3,9,10]    \\
 				&                                                                                                                                                         & Incineration                                                                     & 6.43                                      & RecoPhos                                                                                 & Mineral                                                                           & 87                                                                                    & 2.5                                  & 9                                                            &     [3,9,10]     \\
 				&                                                                                                                                                         & Incineration                                                                     & 6.43                                      & Thermophos                                                                               & P4                                                                                & 81                                                                                    & 2.7                                  & 9                                                            &     [3,9,10]     \\ 
 				%			\cmidrule(l){1-10}
